# snap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: all.c  basic.c  clear.c  main.c
examples/shaders/: texture.frag  texture.vert
snap/: CMakeLists.txt
snap/include/: clock.h  gfx.h  keyboard.h  shader.h  snap.h  utils.h  vec.h  vec2.h
snap/shaders/: font.frag  font.vert  texture.frag  texture.vert
snap/src/: clock.c  gfx.c  keyboard.c  shader.c  utils.c
